--- a/css/styles.css
+++ b/css/styles.css
@@ -35,9 +35,9 @@ main {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: auto;
-    padding-top: 10%;
-  padding-left: 10%;
-  padding-right: 10%;
+    padding-top: 5%;
+  padding-left: 20%;
+  padding-right: 20%;
   bottom: 0;
   top: 0;
   right: 0;
@@ -59,8 +59,8 @@ main {
   width: 80%;
     color: white;
   margin-left: 10%;
-  margin-right: 50%;
-    padding-right: 25%;
+  margin-right: 10%;
+    padding-right: 0%;
   bottom: 0;
   top: 0;
   right: 0;
@@ -72,12 +72,12 @@ main {
     letter-spacing: 1px;
     font-family: 'Raleway', sans-serif;
     font-size: 30px;
+    display: block;
+    background-color: #f7941d;
   height: auto;
-  width: 80%;
+  width: 100%;
     text-align: center;
-    color: white;
-  margin-left: 10%;
-  margin-right: 10%;
+    color: black;
   bottom: 0;
   top: 0;
   right: 0;
