--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ main {
 
 .content-overlay {
   position: absolute;
-  height: 100%;
+  height: 20px;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -56,11 +56,9 @@ main {
 .textblock {
     letter-spacing: 1px;
   height: auto;
-  width: 80%;
+  width: 70%;
     color: white;
-  margin-left: 10%;
-  margin-right: 10%;
-    padding-right: 0%;
+    margin: auto;
   bottom: 0;
   top: 0;
   right: 0;
@@ -80,6 +78,7 @@ main {
   top: 0;
   right: 0;
   left: 0;
+    z-index: 1000;
 }
 
 
